# models/Categories.go
@@ -28,13 +28,18 @@ type CategoryCreateBody struct {
 	Image       string `json:"image"`
 }
 
-type CategoryqInfo struct {
+type CategoryInfo struct {
+	CategoryID  string `json:"category_id"`
+	Name        string `json:"name"`
+	Image       string `json:"image"`
+	Description string `json:"description"`
+	CreatorID   uint   `json:"creator_id"`
+	Created     string `json:"created"`
+	Updated     string `json:"updated"`
+}
+
+type CategoryInfoByIdBody struct {
 	CategoryID string `json:"category_id"`
-	Name       string `json:"name"`
-	Image      string `json:"image"`
-	CreatorID  uint   `json:"creator_id"`
-	Created    string `json:"created"`
-	Updated    string `json:"updated"`
 }
 
 type CategoryUpdateBody struct {
